# vecx

./: Cargo.toml  README.md
.github/workflows/: CI.yml
benches/: iter.rs  purge.rs  push.rs  remove.rs  reserve.rs
src/: lib.rs  mem.rs  value.rs  vec.rs
tests/: type_erased_vec.rs
